# LLVM-openmp

runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  threading_layer.c  threading_layer.h  z_Darwin_asm.S
runtime/src/lithe/: kmp_lithe.cpp  kmp_lithe.h  kmp_lithe_entry.cpp
runtime/test/: CMakeLists.txt
runtime/test/lithe/: CMakeLists.txt  lithe_test.c  run_tests.sh  test_framework.h
runtime/test/lithe/tests/: test_lithe_integration.c  test_parallel.c  test_synchronization.c  test_worksharing.c
runtime/test/threading/: CMakeLists.txt  README.md  openmp_threading_example.c  threading_test.c
